<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:textColor="#FFFFFF"
        android:background="#000000"
        />

    <Button
        android:id="@+id/Button01"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/ver_carta"
        android:textColor="#FFFFFF"
        android:background="#000000"
        android:alpha="0.75"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:text="@string/pedidos"
        android:gravity="center"
        android:textSize="18sp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:textColor="#FFFFFF"
        android:background="#000000"
        android:alpha="0.75"
        />
    <Button
        android:id="@+id/Button02"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/hacer_pedido"/>
    <Button
        android:id="@+id/Button03"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/calcular_pedido"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:text="@string/reservas"
        android:gravity="center"
        android:textSize="18sp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:textColor="#FFFFFF"
        android:background="#000000"
        android:alpha="0.75"
        />
    <Button
        android:id="@+id/Button04"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/hacer_reserva"/>
    <Button
        android:id="@+id/Button05"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/eliminar_reserva"
        />
    <Button
        android:id="@+id/Button06"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:textColor="#FFFFFF"
        android:background="#000000"
        android:alpha="0.75"
        android:text="@string/salir"/>

</LinearLayout>